@@ -1,6 +1,5 @@
 
-To run the testsuite, copy the content of this directory into
-the top level directory, and modify the Makefile from 
+To run the testsuite, modify the Makefile from 
 
 SRC :=                                  \
 main.cpp
@@ -8,4 +7,4 @@ main.cpp
 to
 
 SRC :=                                  \
-testsuite.cpp
+miosix/testsuite/testsuite.cpp
